--- a/css/blocks/_advantages.scss
+++ b/css/blocks/_advantages.scss
@@ -23,7 +23,6 @@
     }
 
     @media (max-width:$mobile-bp) {
-      min-width: 343px;
       gap: 46px;
     }
   
@@ -39,9 +38,11 @@
     margin-top: 28px;
     margin-bottom: 16px;
     font-weight: 400;
+    font-size: 19.96px;
+    line-height: 23.95px;
   }
   .advantages-description {
     font-weight: 300;
     font-size: 13.972px;
-    line-height: 17px;
+    line-height: 16.77px;
   }
