--- a/css/blocks/_button.scss
+++ b/css/blocks/_button.scss
@@ -1,7 +1,7 @@
 @import "../var";
 /* примеры анимаций кнопок */
 .btn {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 15px;
     color: $main-color;
     text-decoration: none;
@@ -23,7 +23,7 @@
         background-color: purple;
         color: #fff;
         /* border: 1px solid #fff; */
-        box-shadow: 0px 0px 10px purple ;
+        box-shadow: 0px 0px 10px purple;
         transform: rotate(360deg);
         /* transform: rotateX(360deg); */
         /* transform: rotateY(360deg); */
@@ -34,7 +34,7 @@
     }
 }
 .btn-1 {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     font-size: 15px;
     color: $main-color;
     text-decoration: none;
@@ -48,25 +48,31 @@
     }
 }
 @keyframes bounce {
-    0% {transform: translateX(0px);}
-    50% {transform: translateX(10px);}
-    100% {transform: translateX(-10px);}
+    0% {
+        transform: translateX(0px);
+    }
+    50% {
+        transform: translateX(10px);
+    }
+    100% {
+        transform: translateX(-10px);
+    }
 }
 /* примеры анимаций кнопок */
 
 /* Основа кнопки */
 .products-catalog-button {
     text-decoration: none;
-    background-color: #FFFFFF;
-    padding: 14.5px 35.5px;
-    border: 1px solid #FF6A6A;
-    color: #F26376;
+    background-color: #ffffff;
+    padding: 10.5px 35.5px;
+    border: 1px solid #ff6a6a;
+    color: #f26376;
     font-size: 16px;
     line-height: 19px;
     font-weight: 400;
     display: inline-flex;
     align-items: center;
-    margin-bottom: 95.5px;
+    margin-bottom: 95px;
     margin-top: 48px;
     width: 211px;
     background-color: none;
@@ -74,12 +80,12 @@
     transition-duration: 0.3s, 0.3s;
     transition-delay: 0.2s, 0.2s;
     &:hover {
-      color: #FFFFFF;
-      background-color: $main-color;
-      transform: rotate(360deg);
-      .products-catalog-button-img {
-          fill: #FFFFFF;
-      }
+        color: #ffffff;
+        background-color: $main-color;
+        transform: rotate(360deg);
+        .products-catalog-button-img {
+            fill: #ffffff;
+        }
     }
     &-img {
         fill: $main-color;
@@ -87,6 +93,16 @@
         transition-property: fill;
         transition-duration: 0.3s;
         transition-delay: 0.2s;
+    }
+
+    @media (max-width: $tablet-bp) {
+        margin-top: 32.48;
+        margin-bottom: 64.52px;
+    }
+
+    @media (max-width: $mobile-bp) {
+        margin-top: 40.61px;
+        margin-bottom: 96px;
     }
 }
 /* Основа кнопки */
