--- a/css/blocks/_catalog-filter.scss
+++ b/css/blocks/_catalog-filter.scss
@@ -1,35 +1,59 @@
 @import "../var";
 details summary::-webkit-details-marker {
-  display:none;
+  display: none;
 }
 /* Каталог фильтр */
-.catalog-filter {}
+.catalog-filter {
+}
 .catalog-filter-wrap {
   height: 132px;
   display: flex;
   align-items: center;
   gap: 30px;
+
+  @media (max-width: $tablet-bp) {
+    height: 81px;
+    justify-content: space-between;
+  }
 }
 
 .filter-wrap {
- width: (1140px - 60px) / 3;
- display: flex;
- /* background-color: #a9bee4; */
+  width: (1140px - 60px) / 3;
+  display: flex;
+  /* background-color: #a9bee4; */
+
+  @media (max-width: $tablet-bp) {
+    width: unset;
+    &:first-child {
+      margin-left: -10px;
+    }
+  }
+
+  @media (max-width: $mobile-bp) {
+    &:first-child {
+      width: 47.5px;
+      height: 25px;
+    }
+  }
 }
 .filter-det {
   margin-top: -10px;
- text-align: left;
- position: relative;
- cursor: pointer;
- /* width: 360px; */
- background-color: #FFFFFF;
- /* transition: 1s ease-in-out all; */
- &:hover {
-   color: $main-color;
-   .filter-img {
-    fill: $main-color;
-   }
- }
+  text-align: left;
+  position: relative;
+  cursor: pointer;
+  /* width: 360px; */
+  background-color: #ffffff;
+  /* transition: 1s ease-in-out all; */
+  &:hover {
+    color: $main-color;
+    .filter-img {
+      fill: $main-color;
+    }
+  }
+
+  @media (max-width: $mobile-bp) {
+    position: absolute;
+  }
 }
 .filter-det[open] {
   width: 360px;
@@ -45,8 +69,12 @@ details summary::-webkit-details-marker {
   }
 }
 @keyframes filter-anim {
-  0%    {opacity: 0;}
-  100%  {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .filter-summ-heading {
   transition: 1s ease-in-out all;
@@ -55,25 +83,39 @@ details summary::-webkit-details-marker {
   padding: 10px 0 0 10px;
   display: flex;
   align-items: center;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   position: relative;
-  z-index: 20; 
+  z-index: 20;
   font-weight: 600;
   line-height: 16.8px;
   & > svg {
     margin-left: 10px;
     transition: 1s ease-in-out all;
   }
+
+  @media (max-width: $mobile-bp) {
+    /* padding: 0px; */
+    & > span {
+      display: none;
+    }
+    & > svg {
+      width: 37.5px !important;
+      height: 25px !important;
+      margin-left: 0px;
+    }
+  }
 }
 
 .filter-list {
   list-style-type: none;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
 }
 .filter-list-li {
+  width: 360px;
+  overflow: hidden;
   font-weight: 400;
   line-height: 16.8px;
-  color: #6F6E6E;
+  color: #6f6e6e;
   padding: 6px 6px 6px 30px;
   transition: 1s ease-in-out all;
   &:hover {
@@ -88,8 +130,10 @@ details summary::-webkit-details-marker {
   color: $main-color;
 }
 .filter-summ {
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   width: 340px;
+  overflow: hidden;
+  /* max-width: 340px; */
   height: 37px;
   padding: 16px;
   margin: 9px 10px;
@@ -98,9 +142,9 @@ details summary::-webkit-details-marker {
   line-height: 16.8px;
   font-size: 14px;
   text-transform: uppercase;
-  color: #6F6E6E;
+  color: #6f6e6e;
   border-left: 5px solid $main-color;
-  border-bottom: 1px solid #EBEBEB;
+  border-bottom: 1px solid #ebebeb;
   display: flex;
   align-items: center;
   transition: 1s ease-in-out all;
@@ -119,11 +163,11 @@ details summary::-webkit-details-marker {
   position: relative;
 } */
 .filter-button {
- /*  display: block;
+  /*  display: block;
   display: flex;
   align-items: center; */
   margin-right: 28px;
-  color: #6F6E6E;
+  color: #6f6e6e;
   font-weight: 400;
   line-height: 16.8px;
   position: relative;
@@ -131,6 +175,7 @@ details summary::-webkit-details-marker {
   /* transition: 1s ease-in-out all; */
   &:hover {
     color: $main-color;
+    z-index: 30;
     .filter-arrow-img {
       fill: $main-color;
     }
@@ -145,6 +190,29 @@ details summary::-webkit-details-marker {
     .filter-arrow-img {
       fill: $main-color;
     }
+
+    @media (max-width:$tablet-bp) {
+      &:last-child {
+        padding-right: 0px;
+      }
+    }
+    @media (max-width:$mobile-bp) {
+      padding-right: 24px;
+      &:last-child {
+        padding-right: 0px;
+      }
+    }
+  }
+
+  @media (max-width: $tablet-bp) {
+    &:last-child {
+      margin-right: 0px;
+    }
+  }
+  @media (max-width:$mobile-bp) {
+    font-size: 12px;
+    line-height: 14.4px;
+    margin-right: 24px;
   }
 }
 .filter-button-summ {
@@ -156,7 +224,7 @@ details summary::-webkit-details-marker {
   }
 }
 .filter-arrow-img {
-  fill: #6F6E6E;
+  fill: #6f6e6e;
   margin-top: 2px;
   /* margin-right: 28px; */
   margin-left: 11px;
@@ -164,7 +232,8 @@ details summary::-webkit-details-marker {
 }
 .filter-drop-check {
   min-width: 79px;
-  max-width: 161px;
+  /* max-width: 161px; */
+  width: 100%;
   text-align: left;
   margin-top: 5px;
   margin-left: -9px;
@@ -173,9 +242,20 @@ details summary::-webkit-details-marker {
     box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
     z-index: 30;
   }
+
+  @media (max-width:$mobile-bp) {
+    width: 100%;
+    min-width: 71px;
+  }
+}
+.filter-drop-last {
+  width: calc(100% + 40px);
+  @media (max-width:$tablet-bp) {
+    width: calc(100% + 24px);
+  }
 }
 .filter-drop-label {
-  color: #6F6E6E;
+  color: #6f6e6e;
   margin: 4.5px 9px;
   cursor: pointer;
   display: flex;
@@ -193,14 +273,14 @@ details summary::-webkit-details-marker {
 }
 
 .filter-drop-inp {
-  font-family: 'Lato', sans-serif !important;
+  font-family: "Lato", sans-serif !important;
   margin-right: 9px !important;
   width: 13px !important;
   height: 13px !important;
-  border: 1px solid #EBEBEB !important;
+  border: 1px solid #ebebeb !important;
   border-radius: 0px !important;
-  --active: #FFFFFF !important;
-  --active-inner: #EF5B70 !important;
+  --active: #ffffff !important;
+  --active-inner: #ef5b70 !important;
   --focus: none !important;
   &:not(.switch)::after {
     width: 4px !important;
@@ -212,7 +292,8 @@ details summary::-webkit-details-marker {
 .filter-drop-sp {
   /* max-width: 80%; */
   max-width: calc(100% - 23px);
-/*   &:hover {
+  overflow: hidden;
+  /*   &:hover {
     color: $main-color;
     transition: 0.3s ease-in-out all;
   } */
@@ -221,20 +302,25 @@ details summary::-webkit-details-marker {
 
 /* paggination */
 .products-catalog-pagination {
-  border: 1px solid #EBEBEB;
-  height: 43px;
+  border: 1px solid #ebebeb;
+  height: 44px;
   width: 282.91px;
   display: inline-flex;
   align-items: center;
   margin-top: 48px;
   margin-bottom: 96px;
+
+  @media (max-width: $tablet-bp) {
+    margin-top: 40px;
+    margin-bottom: 63px;
+  }
 }
 .products-catalog-pagination-arrow {
   padding: 8px 4px;
   margin: 0 11px;
   height: 35.5px;
   border: none;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   cursor: pointer;
   &:hover {
     transition: 1s ease-in-out all;
@@ -271,22 +357,43 @@ details summary::-webkit-details-marker {
   font-weight: 300;
   font-size: 16px;
   line-height: 19.2px;
-  color: #EBEBEB;
- /*  &:hover {
+  color: #ebebeb;
+  /*  &:hover {
     color: $main-color;
   } */
 }
 .products-catalog-page-aft {
   &:last-child::before {
     content: ".....";
-    color: #EBEBEB;
+    color: #ebebeb;
   }
   &:nth-child(6) {
     margin-right: -23px;
   }
 }
 .products-catalog-page-link-active {
-  color: #EF5B70;
+  color: #ef5b70;
   transform: scale(1.3);
 }
 /* paggination */
+
+/* правки */
+.catalog-products-corr {
+  @media (max-width: $tablet-bp) {
+    .products-catalog-card:last-child {
+      display: none;
+    }
+  }
+  @media (max-width: $mobile-bp) {
+    .products-catalog-card:last-child {
+      display: flex;
+    }
+  }
+}
+/* правки */
+.product-filter-drop-corr {
+  width: calc(100% + 50px);
+  @media (max-width:$mobile-bp) {
+    width: calc(100% + 40px);
+  }
+}
