--- a/css/blocks/_categories.scss
+++ b/css/blocks/_categories.scss
@@ -4,86 +4,98 @@
     transition: 0.7s ease-in-out all;
   }
 }
-  .сategories-wrap {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding-top: 64px;
-    padding-bottom: 96px;
-    gap: 30px;
-    list-style-type: none;
-    @media (max-width:$tablet-bp) {
-      gap: 19px;
-      padding-bottom: 154px;
-    }
-    @media (max-width:$mobile-bp) {
-      min-width: 343px;
-      flex-direction: column;     
-    }
+.сategories-wrap {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-top: 64px;
+  padding-bottom: 96px;
+  gap: 30px;
+  list-style-type: none;
+  @media (max-width: $tablet-bp) {
+    gap: 19px;
+    padding-bottom: 154px;
   }
-  .categories-card {
-    background-color: #C4C4C4;
-    height: 260px;
-    /* width: 360px;  */  
-    width: 31.5%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    &:hover {
-      transform: scale(1.02);
-      box-shadow: $shadow;
-    }
-
-    @media (max-width:$tablet-bp) {
-      height: 232px;
-    }
-
-    @media (max-width:$mobile-bp) {
-      width: 100%;
-      height: 247px;
-      gap: 32px;
-    }
-  }
-  .categories-card:nth-child(1){
-    background-image: url(../img/cat-for-w.jpg);
-  }
-  .categories-card:nth-child(2){
-    background-image: url(../img/cat-for-m.jpg);
-  }
-  .categories-card:nth-child(3){
-    background-image: url(../img/cat-for-k.jpg);
-  }
-  .categories-card:last-child {
-    width: 100%;
-    height: 180px;
-    background-image: url(../img/cat-acc.jpg);
-    
-    @media (max-width:$tablet-bp) {
-      height: 116px;
-    }
-  }
-  .categories-desc {
-    text-decoration: none;  
-    padding: 20px;
-    display: flex;
+  @media (max-width: $mobile-bp) {
     flex-direction: column;
-    justify-content: center;
+    padding-bottom: 64px;
+  }
+}
+.categories-card {
+  background-color: #c4c4c4;
+  height: 260px;
+  /* width: 360px;  */
+  width: 31.5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  &:hover {
+    transform: scale(1.02);
+    box-shadow: $shadow;
+  }
+
+  @media (max-width: $tablet-bp) {
+    max-height: 167px;
+  }
+
+  @media (max-width: $mobile-bp) {
     width: 100%;
-    height: 100%;
+    /* height: 247px; */
+    max-height: 247px;
+    gap: 32px;
   }
-  .categories-name {
-      width: 100%;
-      margin: 0;
-      font-weight: bold;
-      font-size: 24px;
-      line-height: 29px;
-      color: #F16D7F;
+}
+.categories-card:nth-child(1) {
+  background-image: url(../img/cat-for-w.jpg);
+}
+.categories-card:nth-child(2) {
+  background-image: url(../img/cat-for-m.jpg);
+}
+.categories-card:nth-child(3) {
+  background-image: url(../img/cat-for-k.jpg);
+}
+.categories-card:last-child {
+  width: 100%;
+  height: 180px;
+  background-image: url(../img/cat-acc.jpg);
+
+  @media (max-width: $tablet-bp) {
+    max-height: 116px;
   }
-  .categories-name::first-line {
-      font-size: 16px;
-      line-height: 19px;
-      color: #FFFFFF;
+
+  @media (max-width: $mobile-bp) {
+    max-height: 111px;
   }
+}
+.categories-desc {
+  text-decoration: none;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.categories-name {
+  width: 100%;
+  margin: 0;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 28.8px;
+  font-weight: 700;
+  color: #f16d7f;
+}
+.categories-name::first-line {
+  font-size: 16px;
+  line-height: 19.2px;
+  font-weight: 400;
+  color: #ffffff;
+}
+//идея для маштабируемых категорий
+/* .categories-card > img {
+  width: 100%;
+} */
+//идея для маштабируемых категорий
