--- a/css/blocks/_promo.scss
+++ b/css/blocks/_promo.scss
@@ -1,96 +1,99 @@
 @import "../var";
+/* promo */
 .promo {
-    /* background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%); */
-   background-color: #F1E4E6;
-   /* min-width: 1140px; */
-   }
-   .promo-wrap {
-     display: flex;
-     align-items: center;
-     background-image:url(../img/promo-man.png) ;
-     background-repeat: no-repeat;
-     background-position: -215px bottom;
-     background-color: #F1E4E6;
-     min-height: 764px;
-     justify-content: flex-end;
-     text-align: left;
-     transition: 1s ease-in-out all;
-     /*background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%);*/
-     @media (max-width:$tablet-bp) {
-       min-height: 386px;
-       /* background-position: 0 0; */
-       background-position-x: 0;
-       transition: 1s ease-in-out all;
-       background-size: contain;
-     }
+/* background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%); */
+  background-color: #F1E4E6;
+/* min-width: 1140px; */
+margin-top: 75px;
+}
+.promo-wrap {
+  display: flex;
+  align-items: center;
+  background-image:url(../img/promo-man.png) ;
+  background-repeat: no-repeat;
+  background-position: -210px bottom;
+  background-color: #F1E4E6;
+  min-height: 764px;
+  justify-content: flex-end;
+  text-align: left;
+  transition: 1s ease-in-out all;
+  /*background: linear-gradient(to right, rgba(113, 103, 105, 0.08) 50%, #F1E4E6 50%);*/
+  @media (max-width:$tablet-bp) {
+    min-height: 386px;
+    /* background-position: 0 0; */
+    background-position-x: 0;
+    transition: 1s ease-in-out all;
+    background-size: contain;
+  }
 
-     @media (max-width:$mobile-bp) {
-      min-width: 343px;
-      /* background-image: none; */
-      justify-content: center;
-      transition: 1s ease-in-out all;
-      background-position-x: -500px;
-
-     }
-   }
-   .promo-title{
-     font-weight: 900;
-     font-size: 48px;
-     line-height: 58px;
-     color: #222222;
-     border-left: 12px solid #F16D7F;
-     padding-left: 16px;
-     margin-right: 100px;
-	   animation: promo-heading-rot 0.65s linear both ,promo-heading-color 0.65s linear both;
-
-     @media (max-width:$tablet-bp) {
-       margin-right: 16px;
-       font-size: 44px;
-       line-height: 52.8px;
-     }
-   }
-
+  @media (max-width:$mobile-bp) {
+  /* background-image: none; */
+  justify-content: center;
+  transition: 1s ease-in-out all;
+  background-position-x: -500px;
+  }
+}
+.promo-title{
+  font-weight: 900;
+  font-size: 48px;
+  line-height: 57.6px;
+  color: #222222;
+  border-left: 12px solid #F16D7F;
+  padding-left: 16px;
+  margin-right: 100px;
+	animation: promo-heading-rot 0.65s linear both ,promo-heading-color 0.65s linear both;
   @keyframes promo-heading-rot {
-    0% {
-      -webkit-transform: scale(1) rotateZ(0);
-              transform: scale(1) rotateZ(0);
-    }
-    50% {
-      -webkit-transform: scale(2) rotateZ(180deg);
-              transform: scale(2) rotateZ(180deg);
-    }
-    100% {
-      -webkit-transform: scale(1) rotateZ(360deg);
-              transform: scale(1) rotateZ(360deg);
-    }
+      0% {
+                transform: scale(1) rotateZ(0);
+      }
+      50% {
+                transform: scale(2) rotateZ(180deg);
+      }
+      100% {
+                transform: scale(1) rotateZ(360deg);
+      }
+  }
+  @keyframes promo-heading-color {
+      0% {
+                border-left: 12px solid green;
+      }
+      50% {
+        border-left: 12px solid red;
+      }
+      100% {
+        border-left: 12px solid $main-color;
+      }
   }
 
-  @keyframes promo-heading-color {
-    0% {
-      /* -webkit-transform: scale(1) rotateZ(0); */
-              border-left: 12px solid green;
-    }
-    50% {
-      /* -webkit-transform: scale(2) rotateZ(180deg); */
-      border-left: 12px solid red;
-    }
-    100% {
-      /* -webkit-transform: scale(1) rotateZ(360deg); */
-      border-left: 12px solid $main-color;
-    }
+  @media (max-width:$tablet-bp) {
+  margin-right: 16px;
+    font-size: 44px;
+    line-height: 52.8px;
   }
-   .promo-title-small{
-     font-weight: 700;
-     font-size: 32px;
-     line-height: 38px;
-     color: #222222;
-     display: block;
-     @media (max-width:$tablet-bp) {
-      font-size: 24px;
-      line-height: 29px;
-     }
-   }
-   .promo-title-pink{
-     color: #F16D7F;
-   }
-   /* promo */
+
+  @media (max-width:$mobile-bp) {
+  font-size: 38px;
+  line-height: 45.6px;
+  }
+}
+.promo-title-small{
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 38.4px;
+  color: #222222;
+  display: block;
+  @media (max-width:$tablet-bp) {
+  font-size: 24px;
+  line-height: 28.8px;
+  }
+
+  @media (max-width:$mobile-bp) {
+    font-size: 20px;
+    line-height: 24px;
+  }
+}
+.promo-title-pink{
+  color: #F16D7F;
+}
+
+/* promo */
