--- a/css/blocks/_totest.scss
+++ b/css/blocks/_totest.scss
@@ -4,15 +4,16 @@
       background-size: 400% 400%;
       animation: gradient 15s ease infinite;
     font-size: 50px;
-    /* display: none; */
+    min-width: 375px;
+    display: none;
   }
 .totest-wrap {
   display: flex;
   justify-content: space-between;
   min-height: 45px;
-  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 400% 400%;
-    animation: gradient 15s ease infinite; */
+    animation: gradient 15s ease infinite;
   font-size: 50px;
   align-items: center;
 
@@ -21,7 +22,7 @@
   }
 
   @media (max-width:$mobile-bp) {
-    /* flex-direction: column; */
+    flex-direction: column;
     font-size: 15px;
     min-width: 343px;
   }
@@ -41,3 +42,7 @@
   text-decoration: none;
 }
 /* to test */
+/* .lol {
+  color: red;
+  margin: 0
+} */
